add invitation-based account activation
