# backend/app/schemas/auth.py
@@ -25,3 +25,13 @@ class ReaderLoginInvitationResponse(BaseModel):
     reader_id: uuid.UUID
     email: str
     accepted: bool
+
+
+class CaregiverLoginInvitationCreate(BaseModel):
+    email: str
+
+
+class CaregiverLoginInvitationResponse(BaseModel):
+    id: uuid.UUID
+    email: str
+    accepted: bool
